--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,81 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Your Name — Research · Teaching · Miscellany</title>
+<meta name="description" content="Short academic bio and links for Your Name." />
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>📚</text></svg>">
+<meta property="og:title" content="Your Name — Research · Teaching · Miscellany" />
+<meta property="og:description" content="Short academic bio and links for Your Name." />
+<meta property="og:type" content="website" />
+<meta name="color-scheme" content="light dark" />
+<style>
+:root {
+--bg: #ffffff;
+--fg: #111111;
+--muted: #555;
+--link: #0a66c2;
+--chip-bg: #f2f4f7;
+--chip-fg: #333;
+--border: #e5e7eb;
+}
+@media (prefers-color-scheme: dark) {
+:root { --bg:#0b0c0e; --fg:#f3f4f6; --muted:#a3a3a3; --link:#69a6ff; --chip-bg:#14161a; --chip-fg:#e5e7eb; --border:#1f232a; }
+}
+html, body { height: 100%; }
+body {
+margin: 0; font: 16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+background: var(--bg); color: var(--fg);
+display: grid; place-items: start center;
+}
+.page { width: min(860px, 100%); padding: 32px 20px 64px; }
+header { display: grid; grid-template-columns: 120px 1fr; gap: 20px; align-items: center; }
+.headshot { width: 120px; height: 120px; object-fit: cover; border-radius: 12px; border: 1px solid var(--border); }
+h1 { margin: 0; font-size: clamp(28px, 4vw, 40px); letter-spacing: -0.02em; }
+.subtitle { margin-top: 4px; color: var(--muted); }
+.chips { display: flex; flex-wrap: wrap; gap: 8px; margin-top: 12px; }
+.chip { display: inline-flex; gap: 8px; align-items: center; padding: 6px 10px; border-radius: 999px; background: var(--chip-bg); color: var(--chip-fg); border: 1px solid var(--border); font-size: 14px; }
+.chip a { color: inherit; text-decoration: none; }
+.chip a:hover, a:hover { text-decoration: underline; }
+a { color: var(--link); }
+main { margin-top: 28px; display: grid; gap: 24px; }
+section { padding-top: 8px; border-top: 1px dashed var(--border); }
+h2 { margin: 0 0 6px; font-size: 18px; letter-spacing: 0.02em; text-transform: uppercase; color: var(--muted); }
+p { margin: 0.25rem 0 0.75rem; }
+ul { margin: 8px 0 0 1.25rem; }
+.lead { font-size: 1.05rem; }
+.note { font-size: 0.95rem; color: var(--muted); }
+.inline-list { list-style: none; padding: 0; margin: 0; display: flex; gap: 12px; flex-wrap: wrap; }
+.inline-list li::before { content: "• "; color: var(--muted); }
+.inline-list li:first-child::before { content: ""; }
+footer { margin-top: 28px; color: var(--muted); font-size: 14px; }
+.right-arrow { font-size: 1.1em; }
+</style>
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "Person",
+"name": "Your Name",
+"jobTitle": "Assistant Professor of X",
+"affiliation": {"@type":"Organization","name":"Your University"},
+"email": "firstname.lastname@university.edu",
+"url": "https://YOURUSERNAME.github.io/",
+"sameAs": [
+"https://github.com/YOURUSERNAME",
+"https://twitter.com/yourhandle",
+"https://bsky.app/profile/yourhandle.bsky.social"
+]
+}
+</script>
+</head>
+<body>
+<div class="page">
+<header>
+<img class="headshot" src="headshot.jpg" alt="Portrait of Your Name" />
+<div>
+<h1>Your Name</h1>
+<div class="subtitle">Research · Teaching · Miscellany</div>
+<div class="chips" aria-label="quick links">
+<span class="chip">📄 CV: <a href="EGW_CV.pdf">EGW_CV.pdf</a> <span class="note">(last updated: Aug. 2025)</span></span>
+</html>
